fixed spacing

--- a/web/styles/young.css
+++ b/web/styles/young.css
@@ -10,7 +10,8 @@ and open the template in the editor.
 
 html {
     font-family: sans-serif;
-    height:100%;
+    width: 100%;
+    height: 100%;
 }
 
 header {
@@ -19,15 +20,33 @@ header {
 
 
 body {
-    width: 1500px;
-    margin: auto; 
+    width: 90%;
+    height: 100%;
+    margin: auto;
 }
 
+#body {
+    width: 100%;
+    height: 100%;
+}
+
+.headername {
+    text-align: center;
+}
 .date {
     float: right;
 }
 
 #infoheaderlist ul {
     margin:0;
-    padding:0; 
+    padding:0;
+    text-align: center;
 }
+
+#infoheaderlist ul li {
+    display: inline;
+    padding: .2em 1em;
+    background-color: orange;
+}
+
+
